--- a/src/Numerics/Numerics.csproj
+++ b/src/Numerics/Numerics.csproj
@@ -327,7 +327,9 @@
     <Compile Include="LinearAlgebra\Double\SquareMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\SymmetricDenseMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\SymmetricMatrix.cs" />
+    <Compile Include="LinearAlgebra\Double\TriangularLowerMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\TriangularMatrix.cs" />
+    <Compile Include="LinearAlgebra\Double\TriangularUpperMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\Vector.cs" />
     <Compile Include="LinearAlgebra\Generic\Common.cs" />
     <Compile Include="LinearAlgebra\Generic\IExtraAccessors.cs" />
