--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -563,6 +563,7 @@
     <Compile Include="LinearAlgebraTests\Double\VectorTests.Norm.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="LinearAlgebraTests\PackedStorageTests.cs" />
     <Compile Include="LinearAlgebraTests\Single\DenseMatrixTests.cs">
       <SubType>Code</SubType>
     </Compile>
