[TriangularLowerDenseMatrix] Create TriangularLowerDenseMatrix class
Existing TriangularLowerMatrix class is changed to abstract and is to
be used as a baseline for all types of Triangular Lower matrices
which are not necessarily dense.
Existing code moved to the appropriate class.

Signed-off-by: Alexander Karatarakis <alex@karatarakis.com>

--- a/src/Numerics/Numerics.csproj
+++ b/src/Numerics/Numerics.csproj
@@ -182,6 +182,7 @@
     <Compile Include="LinearAlgebra\Double\SquareMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\SymmetricDenseMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\SymmetricMatrix.cs" />
+    <Compile Include="LinearAlgebra\Double\TriangularLowerDenseMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\TriangularLowerMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\TriangularMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\TriangularUpperMatrix.cs" />
