--- a/src/Numerics/Numerics.csproj
+++ b/src/Numerics/Numerics.csproj
@@ -367,6 +367,7 @@
     <Compile Include="LinearAlgebra\Generic\Matrix.cs" />
     <Compile Include="LinearAlgebra\Generic\Vector.cs" />
     <Compile Include="LinearAlgebra\Single\Vector.cs" />
+    <Compile Include="LinearAlgebra\Double\TriangularUpperDenseMatrix.cs" />
     <Compile Include="Permutation.cs" />
     <Compile Include="Distributions\Continuous\Beta.cs" />
     <Compile Include="Distributions\Continuous\ContinuousUniform.cs" />
