--- a/src/Numerics/Numerics.csproj
+++ b/src/Numerics/Numerics.csproj
@@ -188,7 +188,7 @@
     <Compile Include="LinearAlgebra\Generic\StorageSchemes\Static\PackedStorageSchemeLower.cs" />
     <Compile Include="LinearAlgebra\Generic\StorageSchemes\Static\PackedStorageSchemeUpper.cs" />
     <Compile Include="LinearAlgebra\Generic\StorageSchemes\Static\StaticStorageScheme.cs" />
-    <Compile Include="LinearAlgebra\Generic\StorageSchemes\StorageScheme.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\IStorageScheme.cs" />
     <Compile Include="LinearAlgebra\IO\MatlabReader.cs" />
     <Compile Include="LinearAlgebra\IO\MatlabWriter.cs" />
     <Compile Include="LinearAlgebra\IO\Matlab\ArrayClass.cs" />
