Add interface: IExtraAccessors
Signed-off-by: Alexander Karatarakis <alex@karatarakis.com>

--- a/src/Numerics/Numerics.csproj
+++ b/src/Numerics/Numerics.csproj
@@ -181,6 +181,7 @@
     <Compile Include="LinearAlgebra\Double\SparseMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\Vector.cs" />
     <Compile Include="LinearAlgebra\Generic\Common.cs" />
+    <Compile Include="LinearAlgebra\Generic\IExtraAccessors.cs" />
     <Compile Include="LinearAlgebra\Generic\StorageSchemes\Dynamic\BandStorageScheme.cs" />
     <Compile Include="LinearAlgebra\Generic\StorageSchemes\Dynamic\DynamicStorageScheme.cs" />
     <Compile Include="LinearAlgebra\Generic\StorageSchemes\Dynamic\SkylineStorageScheme.cs" />
