--- a/src/Numerics/Numerics.csproj
+++ b/src/Numerics/Numerics.csproj
@@ -175,6 +175,9 @@
     <Compile Include="LinearAlgebra\Double\Solvers\Preconditioners\IPreConditioner.cs" />
     <Compile Include="LinearAlgebra\Double\Solvers\StopCriterium\IIterationStopCriterium.cs" />
     <Compile Include="LinearAlgebra\Double\SparseMatrix.cs" />
+    <Compile Include="LinearAlgebra\Double\SquareMatrix.cs" />
+    <Compile Include="LinearAlgebra\Double\SymmetricDenseMatrix.cs" />
+    <Compile Include="LinearAlgebra\Double\SymmetricMatrix.cs" />
     <Compile Include="LinearAlgebra\Double\Vector.cs" />
     <Compile Include="LinearAlgebra\Generic\Common.cs" />
     <Compile Include="LinearAlgebra\Complex32\DenseVector.cs" />
@@ -240,6 +243,15 @@
     <Compile Include="LinearAlgebra\Double\Factorization\UserEvd.cs" />
     <Compile Include="LinearAlgebra\Generic\Factorization\GramSchmidt.cs" />
     <Compile Include="LinearAlgebra\Generic\Factorization\Evd.cs" />
+    <Compile Include="LinearAlgebra\Generic\IExtraAccessors.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\Dynamic\BandStorageScheme.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\Dynamic\DynamicStorageScheme.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\Dynamic\SkylineStorageScheme.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\IStorageScheme.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\Static\PackedStorageScheme.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\Static\PackedStorageSchemeLower.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\Static\PackedStorageSchemeUpper.cs" />
+    <Compile Include="LinearAlgebra\Generic\StorageSchemes\Static\StaticStorageScheme.cs" />
     <Compile Include="LinearAlgebra\Single\DenseMatrix.cs" />
     <Compile Include="LinearAlgebra\Single\DenseVector.cs" />
     <Compile Include="LinearAlgebra\Single\DiagonalMatrix.cs" />
